# MLOps

lab10/: .gitignore  report.md
lab10/GitHub-repo-refactor/: repo_config.tf  variables.tf
lab10/GitHub-repo-setup/: main.tf
lab10/aliases/: providers.tf  s3.tf
lab10/multiple-regions-S3-buckets/: main.tf  outputs.tf  s3.tf  variables.tf
lab10/remote-state/: main.tf  providers.tf
lab10/s3-refactor/: outputs.tf  s3.tf  variables.tf
lab10/s3-refactor/modules/s3_bucket/: main.tf  variables.tf
lab12/: .gitignore  Dockerfile  README.md  compose.yaml  data.jsonl  pyproject.toml  weather_2026.csv
lab12/dags/: 02_taskflow_pipeline.py  03_scheduling.py  04_backfilling.py  05_scheduling_with_venvs.py  06_s3_integration.py  07_connections_and_variables.py
lab12/localstack-init/ready.d/: 01-create-buckets.sh
lab12/postgres-init/: 01-create-table.sql
lab13/: README.md  connect_to_llm.py  exercise_2_manual_tools.py  exercise_3_mcp_date_server.py  exercise_4_mcp_plot_server.py  exercise_4_test_plot.py  exercise_5_guardrails.py  pyproject.toml
